[metadata]
name = virtualhe

author = Alan M Watson
author_email = alan.watson@pitt.edu
url = https://github.com/CBI-PITT/virtualhe
license = BSD-3-Clause
description = A python tool for building virtual H&E data from fluorescent microscopy data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/CBI-PITT/virtualhe/issues
    Documentation = https://github.com/CBI-PITT/virtualhe#README.md
    Source Code = https://github.com/CBI-PITT/virtualhe
    User Support = https://github.com/CBI-PITT/virtualhe/issues

[options]
packages = find:
python_requires = >=3.12
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
	numpy
	scikit-image
	matplotlib
	